--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "next": "^11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-animate-on-scroll": "^2.1.5",
+    "react-dom": "17.0.2",
+    "react-reveal": "^1.2.2"
   }
 }
